    bootstrap procedure. The argument R has been removed, but can still be 
    provided in the dots. Default type for boostrap is no longer 'basic' but 
    'perc', which seems better suited for the median.
    (See discussion with MrJerryTAO in 
    https://github.com/AndriSignorell/DescTools/issues/109)
  * Some first helpfiles are generated by roxygen2 now.  
  * The arguments in Winsorize() have been condensed to a single one with an 
    extended flexibility. 
  * Closest() vectorizes the value to be found (argument a).

BUGFIXES:
  * The text for prop.diff will be displayed in Desc.table().
  * Custom xlab and ylab values can be used in plot.Desc.factfact().

DEPRECATED:
  * The DescTools package has grown fat and is increasingly hard to maintain. 
    Therefore will functions that are not directly related to the core 
    of descriptive statistics be outsourced to other packages.
    Following functions will be moved to the package ModTools in near future 
    (until then, a "deprecated"" message is displayed):
    BrierScore(), Conf(), Cstat(), HosmerLemeshowTest(), MAE()
    MAPE(), ModSummary(), MSE(), NMAE(), NMSE(), PseudoR2(), 
    RMSE(), Sens(), SMAPE(), Spec(), StdCoef(), TMod(), VIF() 
  * Arrow() has been moved to the package DescToolsAddIns.  




DescTools 0.99.54 (2024-02-03)
------------------------------

NEW FUNCTIONS ADDED:
  * as.ym() adds a yearmonth class for extracting dateparts and adding months.
  * as.Date.ym() converts a yearmonth to a date.
  * NALevel() allows to quickly define an alternative level for NAs in a factor.
  * CutAge() is a convenient wrapper for cutting age variables in slices 
    of e.g. 10 years.

UPDATED FUNCTIONS:
  * Year(), Month() now also extract the parts from a yearmonth representation.
  * Hodges-Lehman now uses long-longs instead of integers, allowing larger vectors.
  * AddMonthsYM() has been integrated in AddMonths(). Use AddMonths(as.ym(202402)) 
    instead.