@@ -15,9 +15,11 @@ UPDATED FUNCTIONS:
     (See discussion with MrJerryTAO in 
     https://github.com/AndriSignorell/DescTools/issues/109)
   * Some first helpfiles are generated by roxygen2 now.  
-  * The arguments in Winsorize() have been condensed to a single one with an 
+  * The arguments in Winsorize() have been condensed to a single one with  
     extended flexibility. 
   * Closest() vectorizes the value to be found (argument a).
+  * Unwhich() checks its arguments now and got a default value for the argument n.
+  * TOne() gets an improved print routine.
 
 BUGFIXES:
   * The text for prop.diff will be displayed in Desc.table().
